--- a/partners.html
+++ b/partners.html
@@ -285,4 +285,209 @@ preload_image: /assets/img/earth.jpg
       </div>
     </div>
   </div>
+
+  <div class="row my-5">
+    <div class="p-5 col-md-8 bg-light">
+      <h2>SensorFleet</h2>
+      <p>
+        SensorFleet solution is an open sensor platform that can host detection,
+        protection and scanning tools — called Instruments — from 3rd parties,
+        whether commercial, open source or developed in-house. Solution reduces
+        complexity in managing cyber security capabilities and readily available
+        deployment platform improves response times for emerging threats.
+      </p>
+      <div class="border p-4">
+        <strong>Region:</strong> Finland<br />
+        <strong>Contact person:</strong> Sami Petäjäsoja<br />
+        <strong>E-mail:</strong>
+        sami.petajasoja@sensorfleet.com<br />
+        <strong>Cell Phone:</strong> +358 40 5030745<br />
+        <strong>Website:</strong>
+        <a href="https://sensorfleet.com" target="_blank" rel="noopener"
+          >sensorfleet.com</a
+        ><br />
+      </div>
+    </div>
+    <div
+      class="p-0 col-md-4 bg-dark d-flex align-items-center justify-content-center"
+    >
+      <img
+        src="/assets/img/partner-logos/sensorfleet.png"
+        alt=""
+        style="max-width: 240px"
+      />
+    </div>
+  </div>
+
+  <div class="row my-5">
+    <div
+      class="p-0 col-md-4 bg-dark d-flex align-items-center justify-content-center"
+    >
+      <p class="my-5">
+        <img
+          src="/assets/img/partner-logos/spektrs.png"
+          alt=""
+          style="max-width: 240px"
+        />
+      </p>
+    </div>
+    <div class="p-5 col-md-8 bg-light">
+      <h2>Spektrs IO</h2>
+      <p>
+        Spektrs IO is a Latvian company founded in 2021, that highly values
+        enhancing and bolstering national capabilities and resiliency in
+        cyberspace. We trust, that providing these capabilities to our allies in
+        NATO, European Union, and international like-minded partners strengthens
+        the global cyber security ecosystem. We highly value privacy, security,
+        and continuous evolution through research, development, and partnership
+        expansion. We believe in augmenting and expanding human expert
+        capabilities through intuitive and transparent cybersecurity solutions.
+      </p>
+
+      <div class="border p-4">
+        <p>
+          <strong>Region:</strong> Latvia<br />
+          <strong>E-mail:</strong> spektrs[a]spektrs.io<br />
+          <strong>Website:</strong>
+          <a href="https://spektrs.io">spektrs.io</a><br />
+        </p>
+      </div>
+    </div>
+
+    <div class="row my-5">
+      <div class="p-5 col-md-8 bg-light">
+        <h2>Sysctl</h2>
+        <p>
+          Sysctl was started out of necessity. Sister company, cybersecurity
+          consulting company ROMAB, developed software for its internal use, but
+          soon other organizations were asking to have the same software. The
+          development moved to the newly started Sysctl to also marketed and
+          sold the solutions. Secure file transfer solution Deaddrop was the
+          first product with USB cleaner Impex as a close second. Impex
+          developed into a variety of products. To continue building protection
+          and detection for security-critical organizations and critical
+          infrastructure, Sysctl is building partnerships with strategic
+          companies like SensorFu, that provide strong niche products.
+        </p>
+        <div class="border p-4">
+          <strong>Region:</strong> Sweden, Norway<br />
+          <strong>Contact person:</strong> Robert Malmgren<br />
+          <strong>E-mail:</strong>
+          info[a]sysctl.se<br />
+          <strong>Cell Phone:</strong> +46708330378<br />
+          <strong>Website:</strong>
+          <a href="https://sysctl.se" target="_blank" rel="noopener"
+            >sysctl.se</a
+          ><br />
+        </div>
+      </div>
+      <div
+        class="p-0 col-md-4 bg-dark d-flex align-items-center justify-content-center"
+      >
+        <img
+          src="/assets/img/partner-logos/sysctl.png"
+          alt=""
+          style="max-width: 240px"
+        />
+      </div>
+    </div>
+
+    <div class="row my-5">
+      <div
+        class="p-0 col-md-4 bg-dark d-flex align-items-center justify-content-center"
+      >
+        <p class="my-5">
+          <img
+            src="/assets/img/partner-logos/last_mile.png"
+            alt=""
+            style="max-width: 240px"
+          />
+        </p>
+      </div>
+      <div class="p-5 col-md-8 bg-light">
+        <h2>Last Mile AS</h2>
+        <p>
+          Last Mile AS is Scandinavia's leading supplier of communication and
+          security solutions for all industrial environments on land and at sea.
+        </p>
+
+        <div class="border p-4">
+          <p>
+            <strong>Region:</strong> Norway<br />
+            <strong>Contact person:</strong> Stig Mortvedt<br />
+            <strong>E-mail:</strong> stig @ lastmile.no<br />
+            <strong>Cell phone:</strong> +47 971 66 899<br />
+            <strong>Website:</strong>
+            <a href="https://www.lastmile.no">www.lastmile.no</a><br />
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <div class="row my-5">
+      <div class="p-5 col-md-8 bg-light">
+        <h2>Loihde Trust</h2>
+        <p>
+          The main task of Loihde Trust is to increase our customers’ trust in the future. Loihde Trust produces comprehensive corporate security solutions, from security technology to cyber security. When corporate security is viewed as a whole, you can create a business environment for the customer, where the customer is able to develop and focus on core competencies. Loihde Trust is a corporate network that consists of Loihde Trust that focuses on protecting the physical and digital world, Loihde Trust Spellpoint that focuses on identity and access management and Loihde Trust Tansec that focuses on data transfer.
+        </p>
+        <div class="border p-4">
+          <strong>Region:</strong> Finland<br />
+          <strong>Contact person:</strong> Pasi Heikkinen<br />
+          <strong>E-mail:</strong>
+          pasi.heikkinen @ loihde.com<br />
+          <strong>Cell Phone:</strong> +358 301 0222<br />
+          <strong>Website:</strong>
+          <a href="https://www.loihdetrust.com" target="_blank" rel="noopener"
+            >www.loihdetrust.com</a
+          ><br />
+        </div>
+      </div>
+      <div
+        class="p-0 col-md-4 bg-dark d-flex align-items-center justify-content-center"
+      >
+        <img
+          src="/assets/img/partner-logos/loihde.png"
+          alt=""
+          style="max-width: 240px"
+        />
+      </div>
+    </div>
+
+    <div class="row my-5">
+      <div
+        class="p-0 col-md-4 bg-dark d-flex align-items-center justify-content-center"
+      >
+        <p class="my-5">
+          <img
+            src="/assets/img/partner-logos/TG-sec.png"
+            alt=""
+            style="max-width: 240px"
+          />
+        </p>
+      </div>
+      <div class="p-5 col-md-8 bg-light">
+        <h2>TG Security</h2>
+        <p>
+        We specialized in emerging and innovative technology to service our partner and customer ecosystem.
+        </p><p>
+        OUR VISION: A secure cyberspace based on collaboration and trust.
+        </p><p>
+        OUR MISSION: To form strategic alliances and offer purpose-built solutions to safeguards our customers critical assets.
+        </p>
+
+        <div class="border p-4">
+          <p>
+            <strong>Region:</strong> Singapore / SEA<br />
+            <strong>Contact person:</strong> Trevor Goh<br />
+            <strong>E-mail:</strong> enquiries@tg-security.com<br />
+            <strong>Cell phone:</strong> +65 9150 0225<br />
+            <strong>Website:</strong>
+            <a href="https://tg-security.com">tg-security.com</a><br />
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
