--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ preload_image: /assets/img/frontpage_banner.jpg
         Security requirements keep adding up, while systems and security
         solutions get more complex every day. But before implementing more
         advanced and complex solutions, be sure you can verify the basic
-        cybersecurity fundamentals first. Let’s get back to basics.
+        cybersecurity fundamentals first. Let’s get back to basics!
       </p>
     </div>
   </div>
