--- a/beacon.html
+++ b/beacon.html
@@ -22,12 +22,12 @@ preload_image: /assets/img/beacon_banner.jpg
     <div class="col-md-10 col-lg-10 text-center">
       <h1 class="my-4">Always know if your network leaks</h1>
       <p class="lead">
-        We designed SensorFu Beacon for organization that rely on network
-        segmentation, especially in OT environments. Beacons will continuously
+        We designed SensorFu Beacon for organizations that rely on network
+        segmentation, especially in OT environments. Beacons continuously
         test your isolated networks to verify that segmentation is truly
-        working. In over 80% of deployments, Beacon has uncovered critical gaps
-        that led to stronger, safer systems. Knowing the leaks is the first step
-        to fixing them.
+        working. In over 80% of deployments, SensorFu Beacon has uncovered critical gaps
+        that led to stronger, safer systems. Knowing where the leaks are is 
+        the first step toward to fixing them.
       </p>
     </div>
   </div>
@@ -45,11 +45,11 @@ preload_image: /assets/img/beacon_banner.jpg
       <h3>Continuous Validation,<br />Minimal Friction</h3>
       <p>
         Beacons are intentionally lightweight, running silently in the
-        background performing two test cycles. The Fast Loop, that completes in
-        30 minutes and the Slow Loop that spans 2-8 days. Their sole purpose is
-        to reach home by sending an escape test packet every second. These
+        background performing two test cycles: the Fast Loop, which completes in
+        30 minutes, and the Slow Loop, which spans 2-8 days. Their sole purpose is
+        to 'reach home' by sending an escape test packet every second. These
         packets attempt to communicate across isolation boundaries using various
-        methods over both IPv4 and IPv6 networks. If Beacon reaches home, an
+        methods over both IPv4 and IPv6 networks. If a Beacon reaches home, an
         alert is sent.
       </p>
     </div>
@@ -62,10 +62,10 @@ preload_image: /assets/img/beacon_banner.jpg
       />
       <h3>Deploy Where<br />It Matters</h3>
       <p>
-        Rather than finding 300 potential issues in one location, test one
-        important security control in 300 locations. From energy substations and
+        Rather than identifying 300 potential issues in one location, validate one
+        critical security control across 300 locations. From energy substations and
         oil refineries to food and beverage production and logistics automation,
-        Beacon adapts to complex environments. Use it across multiple sites or
+        SensorFu Beacon adapts to complex environments. Deploy it across multiple sites or
         mission-critical network segments to verify that segmentation policies
         remain effective and that existing controls keep high-value assets and
         critical systems isolated.
@@ -82,11 +82,11 @@ preload_image: /assets/img/beacon_banner.jpg
       <h3>Quick and easy deployment</h3>
       <p>
         Beacons can be deployed as Linux or Windows applications, Docker
-        containers, virtual machines, or dedicated devices, letting you reuse
+        containers, virtual machines, or dedicated devices, allowing you reuse
         your existing infrastructure. SensorFu Beacon integrates seamlessly with
         most SIEM systems, IDS solutions, and NDR providers. This makes rollout,
         monitoring, and long-term maintenance straightforward for security
-        operations teams, even in large, distributed or highly regulated
+        operations teams - even in large, distributed or highly regulated
         environments.
       </p>
     </div>
@@ -100,9 +100,9 @@ preload_image: /assets/img/beacon_banner.jpg
         <img src="/assets/img/beacon-infographic.svg" alt="" class="mb-2" />
       </p>
       <p class="lead">
-        Firewall rules, routing, VPNs, switch VLANs, cabling - do you know
+        Firewall rules, routing, VPNs, switch VLANs, cabling - do you know if
         everything is working correctly everywhere, all the time? With SensorFu
-        Beacon, the verification of your most important security control is
+        Beacon, verifying your most important security control becomes
         straightforward and continuous.
       </p>
     </div>
@@ -134,9 +134,9 @@ preload_image: /assets/img/beacon_banner.jpg
     <div class="p-5 col-md-8 bg-light">
       <h2>Beacon Virtual</h2>
       <p>
-        Launch the Virtual Machine Beacons inside VLANs and data centers and see
-        if they can call their Home. Available as an OVA package and ISO image,
-        runs on VMware, VirtualBox, Hyper-V and other platforms.
+        Launch the Virtual Machine Beacons inside VLANs and data centers to see
+        whether they can call their Home. Available as both an OVA package and an ISO image,
+        Beacon runs on VMware, VirtualBox, Hyper-V and other virtualization platforms.
       </p>
     </div>
     <div
@@ -154,8 +154,8 @@ preload_image: /assets/img/beacon_banner.jpg
     <div class="p-5 col-md-8 bg-light">
       <h2>Beacon Device</h2>
       <p>
-        Use the Beacon Devices to test network isolation without the need for an
-        existing platform. Simply power them on, connect them to your network
+        Use the Beacon Devices to validate network isolation without the need for an
+        existing platform. Simply power them on, connect them to your network,
         and leave them in place. Works on Raspberry Pi*.
       </p>
       <p>
@@ -179,13 +179,15 @@ preload_image: /assets/img/beacon_banner.jpg
     <h2>Breaking Out of Isolation - The Great Escape</h2>
 
     <p class="mb-4">
-      Years of research into network protocols and escape techniques, turned
-      into a practical, automated test. This is how it works:
+      Years of research into network protocols and escape techniques have been turned
+      into a practical, automated test set. Here's how it works:
     </p>
 
     <dl class="row mb-4">
       <dt class="col-sm-2 fw-semibold">The Basics:</dt>
-      <dd class="col-sm-10">TCP and UDP over IPv4 and IPv6 → All ports.</dd>
+      <dd class="col-sm-10">
+        TCP and UDP over IPv4 and IPv6 → All ports.
+      </dd>
 
       <dt class="col-sm-2 fw-semibold">DNS Tunneling:</dt>
       <dd class="col-sm-10">
