--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: frontpage
-title: SensorFu Beacon - Always know if your network leaks!
-description: SensorFu Ltd manufactures and sells advanced automatic security policy checks. SensorFu’s first product, SensorFu Beacon, assures the isolation of computer networks.
+title: SensorFu - Let's get back to basics!
+description: SensorFu brings proactive confidence to mission-critical OT systems across all industries. 
 preload_image: /assets/img/frontpage_banner.jpg
 ---
 
@@ -10,11 +10,14 @@ preload_image: /assets/img/frontpage_banner.jpg
     <div class="hero-content">
       <h1>Cybersecurity starts with the fundamentals</h1>
       <p class="lead">
-        Security requirements keep adding up, while systems and security
-        solutions get more complex every day. But before implementing more
-        advanced and complex solutions, be sure you can verify the basic
-        cybersecurity fundamentals first. Let’s get back to basics!
+        The security and operation of cyber-physical systems depend on a 
+        strong foundation of network segmentation. In mission-critical OT environments, 
+        you must continuously verify - 24/7 - that your segmentation is in place and 
+        stays effective. This is what SensorFu Beacon delivers. Let’s get back to basics!
       </p>
+      <div>
+        <a class="btn btn-gradient" href="/beacon.html">Learn more &rarr;</a>
+      </div>
     </div>
   </div>
 </div>
@@ -23,7 +26,7 @@ preload_image: /assets/img/frontpage_banner.jpg
 
 <div class="container-xl my-5 py-2 px-4">
   <h1 class="text-center p-md-4">
-    SensorFu provides cybersecurity for Operational Technology (OT) across all
+    SensorFu brings proactive confidence to mission-critical OT systems across all
     industries
   </h1>
 
