--- a/beacon.html
+++ b/beacon.html
@@ -180,7 +180,8 @@ preload_image: /assets/img/beacon_banner.jpg
 
     <p class="mb-4">
       Years of research into network protocols and escape techniques have been turned
-      into a practical, automated test set. Here's how it works:
+      into a practical, automated test set. <br />
+      Here's how it works:
     </p>
 
     <dl class="row mb-4">
@@ -230,7 +231,7 @@ preload_image: /assets/img/beacon_banner.jpg
 <div class="container-xl my-0 mb-5 text-center">
   <h2>Looking for the Beacon documentation?</h2>
   <p class="my-4">
-    <a href="https://portal.sensorfu.com/manual/" class="btn btn-gradient"
+    <a href="https://portal.sensorfu.com/manual/" class="btn btn-gradient" target="_blank"
       >Beacon User Manual &rarr;</a
     >
   </p>
